--- a/requirements.txt
+++ b/requirements.txt
@@ -20,10 +20,12 @@ google-pasta==0.2.0
 grpcio==1.30.0
 h5py==2.10.0
 idna==2.10
+imageio==2.9.0
 importlib-metadata==1.7.0
 ipykernel==5.3.0
 ipython==7.15.0
 ipython-genutils==0.2.0
+isolearn==0.2.1
 jedi==0.17.1
 joblib==0.16.0
 jupyter-client==6.1.3
@@ -31,8 +33,10 @@ jupyter-core==4.6.3
 Keras==2.2.5
 Keras-Applications==1.0.8
 Keras-Preprocessing==1.1.2
+keras-vis @ git+https://github.com/raghakot/keras-vis.git@90ae5565951b5e6a90d706b8205c2c4dfc271505
 kiwisolver==1.2.0
 logging-exceptions==0.1.8
+logomaker==0.8
 Markdown==3.2.2
 matplotlib==3.3.0
 networkx==2.4
@@ -54,14 +58,17 @@ pyparsing==2.4.7
 pysster==1.2.2
 python-dateutil==2.8.1
 pytz==2020.1
+PyWavelets==1.1.1
 PyYAML==5.3.1
 pyzmq==19.0.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
+scikit-image==0.17.2
 scikit-learn==0.23.1
-scipy==1.4.1
+scipy==1.1.0
 seaborn==0.10.1
+seqprop==0.1
 six==1.15.0
 tensorboard==1.15.0
 tensorboard-plugin-wit==1.7.0
@@ -69,9 +76,12 @@ tensorflow==1.15.3
 tensorflow-estimator==1.15.1
 termcolor==1.1.0
 threadpoolctl==2.1.0
+tifffile==2020.7.17
 tornado==6.0.4
+tqdm==4.48.0
 traitlets==4.3.3
 urllib3==1.25.9
+vis==0.0.5
 wcwidth==0.2.5
 Werkzeug==1.0.1
 wrapt==1.12.1
