--- a/requirements.txt
+++ b/requirements.txt
@@ -1,89 +1,168 @@
+Bottleneck==1.3.2
+CacheControl==0.12.6
+Cython==0.29.20
+Jinja2==2.11.2
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+Keras==2.3.1
+Markdown==3.2.2
+MarkupSafe==1.1.1
+Pillow==7.2.0
+PyWavelets==1.1.1
+PyYAML==5.3.1
+Pygments==2.6.1
+QtPy==1.9.0
+Send2Trash==1.5.0
+Werkzeug==1.0.1
 absl-py==0.9.0
 appdirs==1.4.4
 appnope==0.1.0
 astor==0.8.1
 astunparse==1.6.3
+attrs==19.3.0
 backcall==0.2.0
+beautifulsoup4==4.9.1
 biopython==1.77
+bleach==3.1.5
+blis==0.4.1
+boto3==1.14.1
+boto==2.49.0
+botocore==1.17.1
 cachetools==4.1.1
+catalogue==1.0.0
 certifi==2020.6.20
 chardet==3.0.4
+click==7.1.2
+colorama==0.4.3
+contextlib2==0.6.0
 cycler==0.10.0
+cymem==2.0.3
 decorator==4.4.2
+defusedxml==0.6.0
+distlib==0.3.0
+distro==1.4.0
+docutils==0.15.2
+entrypoints==0.3
+fastai==1.0.61
 fastcluster==1.1.26
+fastprogress==0.2.3
 forgi==2.0.2
 future==0.18.2
 gast==0.2.2
-google-auth==1.19.2
+gensim==3.8.3
+git+git://github.com/johli/seqprop.git
+git+git://github.com/raghakot/keras-vis.git
 google-auth-oauthlib==0.4.1
+google-auth==1.19.2
 google-pasta==0.2.0
 grpcio==1.30.0
 h5py==2.10.0
-idna==2.10
+html5lib==1.0.1
+idna==2.8
 imageio==2.9.0
 importlib-metadata==1.7.0
+ipaddr==2.2.0
 ipykernel==5.3.0
-ipython==7.15.0
 ipython-genutils==0.2.0
+ipython==7.16.1
+ipywidgets==7.5.1
 isolearn==0.2.1
 jedi==0.17.1
+jmespath==0.10.0
 joblib==0.16.0
+json5==0.9.5
+jsonschema==3.2.0
 jupyter-client==6.1.3
+jupyter-console==6.1.0
 jupyter-core==4.6.3
-Keras==2.2.5
-Keras-Applications==1.0.8
-Keras-Preprocessing==1.1.2
+jupyter==1.0.0
+jupyterlab-server==1.1.5
+jupyterlab==2.2.0
+keras-self-attention==0.46.0
 kiwisolver==1.2.0
+llvmlite==0.33.0
+lockfile==0.12.2
 logging-exceptions==0.1.8
 logomaker==0.8
-Markdown==3.2.2
 matplotlib==3.3.0
+mistune==0.8.4
+msgpack==0.6.2
+murmurhash==1.0.2
+nbconvert==5.6.1
+nbformat==5.0.7
 networkx==2.4
+nltk==3.5
+notebook==6.0.3
+numba==0.50.0
+numexpr==2.7.1
 numpy==1.19.0
+nvidia-ml-py3==7.352.0
 oauthlib==3.1.0
+opencv-python==4.2.0.34
 opt-einsum==3.2.1
+packaging==20.3
 pandas==1.0.5
+pandocfilters==1.4.2
 parso==0.7.0
+pep517==0.8.2
 pexpect==4.8.0
 pickleshare==0.7.5
-Pillow==7.2.0
+plac==1.1.3
+preshed==3.0.2
+progress==1.5
+prometheus-client==0.8.0
 prompt-toolkit==3.0.5
 protobuf==3.12.2
 ptyprocess==0.6.0
-pyasn1==0.4.8
 pyasn1-modules==0.2.8
-Pygments==2.6.1
+pyasn1==0.4.8
 pyparsing==2.4.7
+pyrsistent==0.16.0
 pysster==1.2.2
 python-dateutil==2.8.1
+pytoml==0.1.21
 pytz==2020.1
-PyWavelets==1.1.1
-PyYAML==5.3.1
 pyzmq==19.0.1
-requests==2.24.0
+qtconsole==4.7.4
+regex==2020.6.8
 requests-oauthlib==1.3.0
+requests==2.24.0
+retrying==1.3.3
 rsa==4.6
+s3transfer==0.3.3
 scikit-image==0.17.2
 scikit-learn==0.23.1
-scipy==1.1.0
+scipy==1.4.1
 seaborn==0.10.1
+sentencepiece==0.1.91
 six==1.15.0
-tensorboard==1.15.0
+smart-open==2.0.0
+soupsieve==2.0.1
+spacy==2.2.4
+srsly==1.0.2
 tensorboard-plugin-wit==1.7.0
-tensorflow==1.15.3
+tensorboard==1.15.0
 tensorflow-estimator==1.15.1
+tensorflow==1.15.3
 termcolor==1.1.0
+terminado==0.8.3
+testpath==0.4.4
+thinc==7.4.0
 threadpoolctl==2.1.0
 tifffile==2020.7.17
+torch==1.5.0
+torchvision==0.6.0
 tornado==6.0.4
 tqdm==4.48.0
 traitlets==4.3.3
+umap-learn==0.4.4
 urllib3==1.25.9
 vis==0.0.5
+wasabi==0.6.0
+watermark==2.0.2
 wcwidth==0.2.5
-Werkzeug==1.0.1
+webencodings==0.5.1
+widgetsnbextension==3.5.1
 wrapt==1.12.1
 xlrd==1.2.0
 zipp==3.1.0
-git+git://github.com/johli/seqprop.git
-git+git://github.com/raghakot/keras-vis.git
